@@ -13,5 +13,6 @@
 {"apps/http_file/src/*",   [            {outdir, "apps/http_file/ebin"}, {parse_transform, lager_transform}]}.
 {"apps/playlist/src/*",    [            {outdir, "apps/playlist/ebin"}, {parse_transform, lager_transform}]}.
 {"apps/dvr/src/*",         [            {outdir, "apps/dvr/ebin"}, {parse_transform, lager_transform}]}.
+{"apps/dvr/src/*/*",       [            {outdir, "apps/dvr/ebin"}, {parse_transform, lager_transform}]}.
 {"apps/hls/src/*",         [            {outdir, "apps/hls/ebin"}, {parse_transform, lager_transform}]}.
 {"apps/pulse/src/*",       [            {outdir, "apps/pulse/ebin"}, {parse_transform, lager_transform}]}.
